# flopoco

./: .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  COPYING  Dockerfile  FloPoCoConfig.cmake.in  Makefile  README.md  TODO.md  TODO.org  default.nix  flopoco_unit_tests.cmake
HighLevelCores/: CMakeLists.txt
HighLevelCores/include/: Target.hpp  flopoco_types.hpp  utils.hpp
HighLevelCores/include/FixFunctions/: BasicPolyApprox.hpp  FixFunction.hpp  Multipartite.hpp
HighLevelCores/include/Tables/: Table.hpp
HighLevelCores/include/Targets/: Kintex7.hpp  Versal.hpp  VirtexUltrascalePlus.hpp  Zynq7000.hpp
HighLevelCores/include/Tools/: MPFRHandler.hpp
HighLevelCores/include/flopoco/: Target.hpp  report.hpp  utils.hpp
HighLevelCores/src/: CMakeLists.txt  Target.cpp  report.cpp  utils.cpp
HighLevelCores/src/FixFunctions/: BasicPolyApprox.cpp  CMakeLists.txt  FixFunctions.cpp  FixHorner.cpp
HighLevelCores/src/Tables/: Table.cpp
HighLevelCores/src/Targets/: DSP.cpp  Kintex7.cpp  StratixV.cpp  Versal.cpp  Virtex6.cpp  VirtexUltrascalePlus.cpp  Zynq7000.cpp
HighLevelCores/src/Tools/: CMakeLists.txt  MPFRHandler.cpp  Point.cpp  ScaledMPZ.cpp  SollyaHandler.cpp
VHDLOperators/: CMakeLists.txt
VHDLOperators/include/: Operator.hpp  utils.hpp
VHDLOperators/include/BitHeap/: BitHeapTest.hpp  Compressor.hpp
VHDLOperators/include/Comparators/: IntComparator.hpp  IntConstantComparator.hpp
VHDLOperators/include/Complex/: FixComplexR2Butterfly.hpp  FixFFTFullyPA.hpp  IntFFTLevelDIT2.hpp  IntTwiddleMultiplier.hpp  IntTwiddleMultiplierAlternative.hpp  OldFixedComplexMultiplier.hpp
VHDLOperators/include/ConstMult/: CRFPConstMult.hpp  FPConstMult.hpp  FixRealKCM.hpp  IntConstMultShiftAddOptTernary.hpp  IntIntKCM.hpp  ShiftAddDag.hpp
VHDLOperators/include/FPAddSub/: FPAdd.hpp  FPAddSinglePath.hpp  FPAddSub.hpp
VHDLOperators/include/FixFunctions/: BasicPolyApprox.hpp  FixFunctionByMultipartiteTable.hpp  FixFunctionByPiecewisePoly.hpp  FixFunctionBySimplePoly.hpp  FixFunctionByTable.hpp  FixFunctionByVaryingPiecewisePoly.hpp  FixFunctionEmulator.hpp  FixPolyEval.hpp  UniformPiecewisePolyApprox.hpp  VaryingPiecewisePolyApprox.hpp
VHDLOperators/include/IntAddSubCmp/: IntMultiAdder.hpp
VHDLOperators/include/IntMult/: GenericBinaryPolynomial.hpp
VHDLOperators/include/LNS/: AtanPow.hpp  LNSAdd.hpp  LNSMul.hpp  LogSinCos.hpp
VHDLOperators/include/PrimitiveComponents/: Primitive.hpp
VHDLOperators/include/ShiftersEtc/: LZOC3.hpp
VHDLOperators/include/Tables/: DiffCompressedTable.hpp  TableOperator.hpp
VHDLOperators/include/Targets/: AllTargetsHeaders.hpp  StratixV.hpp  Virtex6.hpp
VHDLOperators/include/Trigs/: Atan2Table.hpp  ConstDiv3ForSinPoly.hpp  FixAtan2.hpp  FixSinPoly.hpp
VHDLOperators/include/flopoco/: FloPoCo.hpp  Operator.hpp  ShiftReg.hpp  TargetModel.hpp  TutorialOperator.hpp  UserInterface.hpp
VHDLOperators/src/: CMakeLists.txt  FlopocoStream.cpp  Instance.cpp  Operator.cpp  Signal.cpp  TargetModel.cpp  TutorialOperator.cpp  UserInterface.cpp  VHDLLexerRule.l  utils.cpp
VHDLOperators/src/AutoTest/: AutoTest.cpp
VHDLOperators/src/BitHeap/: Bit.cpp  BitHeap.cpp  BitHeapPlotter.cpp  BitHeapSolution.cpp  BitHeapTest.cpp  CompressionStrategy.cpp  CompressionStrategyOptILP.cpp  Compressor.cpp  FirstFittingCompressionStrategy.cpp  MaxEfficiencyCompressionStrategy.cpp  OptimalCompressionStrategy.cpp  ParandehAfsharCompressionStrategy.cpp  WeightedBit.cpp
VHDLOperators/src/Comparators/: FPComparator.cpp  IntComparator.cpp  IntConstantComparator.cpp
VHDLOperators/src/Complex/: FPComplexAdder.cpp  FPComplexMultiplier.cpp  FixComplexAdder.cpp  FixComplexKCM.cpp  FixComplexR2Butterfly.cpp  FixFFTFullyPA.cpp  IntFFT.cpp  IntTwiddleMultiplier.cpp
VHDLOperators/src/ConstMult/: CRFPConstMult.cpp  FPConstDiv.cpp  FPConstMult.cpp  FPRealKCM.cpp  FixFixConstMult.cpp  FixRealConstMult.cpp  FixRealKCM.cpp  FixRealShiftAdd.cpp  IntConstDiv.cpp  IntConstMCM.cpp  IntConstMult.cpp  IntConstMultShiftAdd.cpp  IntConstMultShiftAddOpt.cpp  IntConstMultShiftAddOptTernary.cpp  IntConstMultShiftAddRPAG.cpp  IntConstMultShiftAddTypes.cpp  IntIntKCM.cpp  KCMTable.cpp  ShiftAddDag.cpp  ShiftAddOp.cpp
VHDLOperators/src/Conversions/: CMakeLists.txt  FP2Fix.cpp  Fix2FP.cpp  InputIEEE.cpp  OutputIEEE.cpp  PIF2Posit.cpp  Posit2FP.cpp  Posit2PIF.cpp
VHDLOperators/src/ExpLog/: FPExp.cpp  FPLog.cpp  FPLogIterative.cpp  FPPow.cpp
VHDLOperators/src/FPAddSub/: FPAdd.cpp  FPAdd3Input.cpp  FPAddDualPath.cpp  FPAddSinglePath.cpp  FPAddSub.cpp
VHDLOperators/src/FPDivSqrt/: FPDiv.cpp  FPSqrt.cpp  FPSqrtPoly.cpp
VHDLOperators/src/FPMultSquare/: FPMult.cpp  FPMultKaratsuba.cpp  FPSquare.cpp
VHDLOperators/src/Factories/: CMakeLists.txt  Factories.cpp
VHDLOperators/src/FixFilters/: CMakeLists.txt  FixFIR.cpp  FixHalfSine.cpp  FixIIR.cpp  FixIIRShiftAdd.cpp  FixRootRaisedCosine.cpp  FixSOPC.cpp
VHDLOperators/src/FixFunctions/: BasicPolyApprox.cpp  CMakeLists.txt  FixFunction.cpp  FixFunctionByMultipartiteTable.cpp  FixFunctionByPiecewisePoly.cpp  FixFunctionBySimplePoly.cpp  FixFunctionByTable.cpp  FixFunctionByVaryingPiecewisePoly.cpp  FixFunctionEmulator.cpp  FixHornerEvaluator.cpp  FixPolyEval.cpp  HOTBM.cpp  Multipartite.cpp  UniformPiecewisePolyApprox.cpp  VaryingPiecewisePolyApprox.cpp
VHDLOperators/src/IEEE/: IEEEAdd.cpp  IEEEFMA.cpp  IEEEFloatFormat.cpp
VHDLOperators/src/IntAddSubCmp/: CarryGenerationCircuit.cpp  IntAdder.cpp  IntDualAddSub.cpp  IntMultiAdder.cpp
VHDLOperators/src/IntMult/: BaseMultiplier.cpp  BaseMultiplierCategory.cpp  BaseMultiplierCollection.cpp  BaseMultiplierDSP.cpp  BaseMultiplierDSPKaratsuba.cpp  BaseMultiplierDSPSuperTilesXilinx.cpp  BaseMultiplierIrregularLUTXilinx.cpp  BaseMultiplierLUT.cpp  BaseMultiplierXilinx2xk.cpp  BaseSquarerLUT.cpp  CMakeLists.txt  DSPBlock.cpp  Field.cpp  FixMultAdd.cpp  GenericBinaryPolynomial.cpp  IntKaratsuba.cpp  IntMultiplier.cpp  (+15 more)
code/FloPoCoBin/: CMakeLists.txt
code/HWTargets/: CMakeLists.txt
code/VHDLOperators/: CMakeLists.txt
src/FloPoCoBin/: CMakeLists.txt
(+1233 files in other folders)
